--- a/Index.html
+++ b/Index.html
@@ -7,29 +7,31 @@
 
          h1{
              text-align:center;
+             font-size: 30pt;
+             margin-top:150px;
          }
 
          
-            #prof a{
-    display:block;
-    text-align:center;
-    color:#ffffff;
-    width:300px;
-    line-height:25px;
-    padding:13px 16px;
-    font-family: 'Open Sans', sans-serif;
-    font-size:20px;
-    border-radius:50px;
-    -webkit-border-radius:100px;
-    -moz-border-radius:100px;
-    margin:0px auto 0px auto;
-    margin-top:50px;
-    transition:all .5s ease;
-    -webkit-transition:all 1s ease;
-    -moz-transition:all 1s ease;
-    border:2px solid #FFFFFF;
-    background-color:#23232d;
-    text-decoration:none;
+    #prof a{
+           display:block;
+           text-align:center;
+            color:#ffffff;
+           width:400px;
+           line-height:55px;
+           padding:13px 16px;
+           font-family:'Open Sans', sans-serif;
+           font-size:50px;
+           border-radius:50px;
+           -webkit-border-radius:100px;
+           -moz-border-radius:100px;
+           margin:0px auto 0px auto;
+           margin-top:150px;
+           transition:all .5s ease;
+           -webkit-transition:all 1s ease;
+           -moz-transition:all 1s ease;
+           border:2px solid #FFFFFF;
+           background-color:#23232d;
+           text-decoration:none;
             }
 
 
@@ -43,7 +45,7 @@
 
       <div id="prof">
 
-          <h1>RAMA KEN QR-CODE READER/GENERATOR</h1>
+       <h1>RAMA KEN QR-CODE <br><br> READER/GENERATOR</h1>
    
          <a href="reader/index.html"> Reader</a>
 
